add new features

--- a/src/view/Layout/Sidebar/sidebar.css
+++ b/src/view/Layout/Sidebar/sidebar.css
@@ -15,6 +15,7 @@
 
 /* Flex wrapper for icons + text */
 .cont {
+  justify-content: center;
   display: flex;
   align-items: center;
   gap: 15px;
